Added more CMakeFiles

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,18 +25,5 @@ set(SOURCE_FILES
 add_library(evserver ${SOURCE_FILES} ${HEADER_FILES})
 target_link_libraries(evserver ev)
 
-
-add_executable(ex_srv ex/ex_srv.c)
-target_link_libraries(ex_srv evserver)
-
-add_executable(ex_server ex/ex_server.c)
-target_link_libraries(ex_server evserver)
-
-add_executable(tcp_echo_server_simple demo/tcp_echo_server_simple.c)
-target_link_libraries(tcp_echo_server_simple evserver)
-
-add_executable(tcp_server_custom_conn demo/tcp_server_custom_conn.c)
-target_link_libraries(tcp_server_custom_conn evserver)
-
-add_executable(tcp_server_graceful_shutdown demo/tcp_server_graceful_shutdown.c)
-target_link_libraries(tcp_server_graceful_shutdown evserver)
+add_subdirectory(demo/)
+add_subdirectory(ex/)
