Improved callbacks naming and added special methods to evsrv, evsrv_conn and evsrv_manager for setting different options (not all though).

--- a/ex/CMakeLists.txt
+++ b/ex/CMakeLists.txt
@@ -1,8 +1,8 @@
 include_directories(../include/)
 
-file( GLOB APP_SOURCES RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} *.c* )
+file( GLOB APP_SOURCES RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} *.c )
 foreach( f ${APP_SOURCES} )
-    string( REPLACE ".c*" "" app ${f} )
+    string( REPLACE ".c" "" app ${f} )
     add_executable( ${app} ${f} )
     target_link_libraries( ${app} evserver )
 endforeach( f ${APP_SOURCES} )
